--- a/index.html
+++ b/index.html
@@ -256,6 +256,166 @@
            </div>
         </div>
     </div>
+
+    <!-- new section just start  -->
+     <div class="Bonuses-secton-container">
+        <div class="container">
+        <div class="Bouuses-content-container">
+            <div class="Bonuses-headings-section">
+                <h2>Get <span class="text-highlight">LIFETIME ACCESS</span> to the Complete Program PLUS ALL 6 Bonuses for Just<br>
+                    <span class="price">$69</span> <span class="total-value">(Total Value: $196)</span></h2>
+                    <p class="text">Unlock $196 in Exclusive Gifts & Bonuses with Your Chakra Healing Journey</p>
+            </div>
+            <div class="descripton-container">
+                <div class="description-content-box">
+                    <div class="img-box">
+                        <img src="/imgAssets/Group 1597881194.png" alt="">
+                    </div>
+                    <div class="text-content">
+                        <h2>🌟 12D Awakening: Complete 7 Chakra Healing Meditation Series🌟 </h2>
+                        <p>
+                            <ul>
+                                <li>7 powerful sound healing meditations (30-35 minutes each)</li>
+                                <li>Advanced 12D technology for deep chakra balancing</li>
+                                <li>Transformative NLP techniques for lasting change</li>
+                                <li>Daily focus on each chakra for complete energy alignment</li>
+                            </ul>
+                        </p>
+                    </div>
+                    <div class="bounces-box-price">
+                        <span>$47</span>
+                        <span>Value</span>
+                    </div>
+                </div>
+                <div class="description-content-box description-content-box-two">
+                    <div class="img-box img-two">
+                        <img src="/imgAssets/Chakra-Affirmation-Cards-1.png" alt="">
+                    </div>
+                    <div class="text-content text-content-two">
+                        <h2>🎁 Chakra Affirmation Cards </h2>
+                        <p>
+                            <ul>
+                                <li> 140 printable cards with 520 powerful affirmations</li>
+                                <li> Boost your daily spiritual practice</li>
+                                <li> Elevate your energy with chakra-specific mantras</li>
+                                <li>FREE with your Lifetime Access! <a href="#">[preview]</a></li>
+                            </ul>
+                        </p>
+                    </div>
+                    <div class="bounces-box-price">
+                        <span>$30</span>
+                        <span>Value</span>
+                    </div>
+                </div>
+                <div class="description-content-box description-content-box-three">
+                    <div class="img-box img-three">
+                        <img src="/imgAssets/FREE-2-50-Yoga-Poses.png" alt="">
+                    </div>
+                    <div class="text-content text-content-three">
+                        <h2>🎁 Yoga Meets Chakras: 50 Poses for Total Energy Alignment</h2>
+                        <p>
+                            <ul>
+                                <li> Illustrated guide to harmonize your chakras through yoga</li>
+                                <li> Enhance your physical and spiritual practice</li>
+                                <li>Transformative NLP techniques for lasting change</li>
+                                <li>FREE when you order now!   <a href="">[preview]</a></li>
+                            </ul>
+                        </p>
+                    </div>
+                    <div class="bounces-box-price">
+                        <span>$30</span>
+                        <span>Value</span>
+                    </div>
+                </div>
+                <div class="bundle-section-heading">
+                    <h2>🔥 EXCLUSIVE BUNDLE OFFER 🔥</h2>
+                </div>
+                <div class="description-content-box bundle-content-box-one  bundle-box-section">
+                    <div class="img-box img-two bundle-img">
+                        <img src="/imgAssets/SPECIALBUNDLE-1-Chakra-Made-Easy-Workbook.png" alt="">
+                    </div>
+                    <div class="text-content text-content-two">
+                        <h2>1. 📓 7 Chakras Made Easy: Your Step-by-Step Workbook</h2>
+                        <p>
+                            <ul>
+                                <li> Practical exercises for daily chakra balancing and healing</li>
+                                <li>Track your progress with guided worksheets</li>
+                                <li>Deepen your understanding of each energy center</li>
+                                <li>NOW ONLY $7.5 - 75% OFF Exclusive Deal!  <a href="#">[preview]</a></li>
+                            </ul>
+                        </p>
+                    </div>
+                    <div class="bounces-box-price">
+                        <span>$30</span>
+                        <span>Value</span>
+                    </div>
+                </div>
+                <div class="description-content-box bundle-content-box-two  bundle-box-section">
+                    <div class="img-box img-two bundle-img">
+                        <img src="/imgAssets/SPECIALBUNDLE-2-Essential-7-Chakra-Reference-Guide.png" alt="">
+                    </div>
+                    <div class="text-content text-content-two">
+                        <h2>2. 🌈 Essential 7 Chakra Quick-Reference Guides </h2>
+                        <p>
+                            <ul>
+                                <li>Instant access to comprehensive chakra insights</li>
+                                <li>Powerful affirmations for each chakra</li>
+                                <li> Discover foods and activities that nourish your energy centers</li>
+                                <li>NOW ONLY $4.5 - 75% OFF Exclusive Deal!<a href="#">[preview]</a></li>
+                            </ul>
+                        </p>
+                    </div>
+                    <div class="bounces-box-price">
+                        <span>$18</span>
+                        <span>Value</span>
+                    </div>
+                </div>
+                <div class="description-content-box bundle-content-box-three bundle-box-section">
+                    <div class="img-box img-two bundle-img ">
+                        <img src="/imgAssets/SPECIALBUNDLE-3-56StonesGuide.png" alt="">
+                    </div>
+                    <div class="text-content text-content-two">
+                        <h2>3. 🔮 56 Stones, 7 Chakras, 1 Powerful Guide: Transform Your Energy
+                        </h2>
+                        <p>
+                            <ul>
+                                <li> Unlock the secrets of crystal healing for each chakra</li>
+                                <li>  Enhance your meditation with the power of gemstones</li>
+                                <li> Learn how to cleanse and charge your crystals for maximum effect</li>
+                                <li>NOW ONLY $5.25 - 75% OFF Exclusive Deal! <a href="#">[preview]</a></li>
+                            </ul>
+                        </p>
+                    </div>
+                    <div class="bounces-box-price">
+                        <span>$21</span>
+                        <span>Value</span>
+                    </div>
+                </div>
+                <div class="description-content-box bundle-content-box-four bundle-box-section">
+                    <div class="img-box img-two bundle-img">
+                        <img src="/imgAssets/SPECIALBUNDLE-4-Nature-Secret-38BachFlower.png" alt="">
+                    </div>
+                    <div class="text-content text-content-two">
+                        <h2>4. 🌸 Nature's Secret Remedies: 38 Bach Flower Seven Chakra Healing Guide </h2>
+                        <p>
+                            <ul>
+                                <li> Harness nature's power for emotional and spiritual wellness</li>
+                                <li>  Complement your chakra healing with time-tested flower remedies</li>
+                                <li>Discover personalized blends for your unique energy needs</li>
+                                <li>NOW ONLY $5 - 75% OFF Exclusive Deal!<a href="#">[preview]</a></li>
+                            </ul>
+                        </p>
+                    </div>
+                    <div class="bounces-box-price">
+                        <span>$20</span>
+                        <span>Value</span>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+        </div>
+     </div>
     
     <script src="/javaSript/jmain.js"></script>
 </body>
